--- a/css/dual-wpforms.css
+++ b/css/dual-wpforms.css
@@ -16,11 +16,7 @@ div.wpforms-container-full {
      margin: 0.5em 0 0;
 }
 
-.wpforms-container .wpforms-submit-container {
-     padding: 10px 0;
-}
-
-@media (max-width: 689.99px) {
+@media only screen and (max-width: 689.99px) {
      .wpforms-container .wpforms-mobile-full {
           width: 100% !important;
           margin-left: 0 !important;
